# rustar

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: sample.tar  tests.rs
